fix issue + update build
- issue fixed in CalendarGUI
with toList()-method.
- updated gradle to build
packages for windows, linux
and macos